--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- CSS only -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/plyr.css" />
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="js/hls.js"></script>
     </head>
     <body>
